cigionline/static/themes/pfpc_series/css/_pfpc_series_article_series.scss
.pfpc-series-article-series {
  @include top-bar($background-color: transparent);
  background-color: $black;

  hr {
    margin: 0 auto 3.5em;
    text-align: center;
    width: 33.33%;
  }

  .cigi-top-bar {
    @include media-breakpoint-down(sm) {
      background-color: $black;
    }
  }

  .pfpc-series-article-series-hero {
    align-items: flex-end;
    display: flex;
    margin-bottom: 2em;
    min-height: 40em;
    position: relative;
    text-align: center;

    &::before {
      @include media-breakpoint-up(md) {
        background-color: $black-alpha-20;
      }
      background-color: $black-alpha-65;
      content: '';
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
    }

    &::after {
      @include media-breakpoint-up(md) {
        background-image: linear-gradient($black 5%, transparent 25%, $black 90%);
        content: '';
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: -1;
      }
    }

    h1 {
      @include media-breakpoint-up(md) {
        font-size: 2.3em;
      }
      color: $white;
      font-family: $tisa-pro;
      font-size: 1.5em;
      font-weight: 600;
      margin: 0 0 1em;
    }

    hr {
      margin-bottom: 0;
    }

    p {
      color: $white;
      line-height: 1.25;
      text-align: left;
    }

    .opinion-series-label {
      color: $landing-heading-teal;
      font-size: 1em;
      font-weight: 500;
      margin-bottom: 0.5em;
    }

    .short-description {
      @include link($color: $white, $hover-color: $cigi-dark-pink);
      font-size: 1.1em;
      padding: 1em 10% 0;

      a {
        text-decoration: underline;
      }
    }

    .video-bg {
      background-position: center;
      background-size: cover;
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: -1;

      video {
        height: 50%;
        min-height: 100%;
        min-width: 100%;
        object-fit: cover;
        width: 100%;
      }
    }
  }

  .pfpc-series-article-series-in-the-series {
    margin: 3em 0;

    h2 {
      color: $landing-heading-teal;
      font-size: 1em;
      font-weight: 500;
      margin-top: 2em;
      text-transform: none;
      width: 100%;
    }

    article {
      align-items: center;
      display: flex;
      margin-bottom: 1.5em;

      .icon-images {
        flex-shrink: 0;
        margin-right: 1em;
        position: relative;

        &.block-opinion {
          &:hover {
            opacity: 0.7;
            transition: opacity 0.2s ease;
          }
        }

        a {
          &:not(:first-of-type) {
            img {
              position: absolute;
            }
          }

          &.inactive {
            img {
              opacity: 0;
            }
          }
        }

        img {
          border-radius: 50%;
          cursor: pointer;
          height: auto;
          left: 0;
          top: 0;
          transition: opacity 1s ease-in-out;
          width: 50px;
        }

        .icon-wrapper {
          align-items: center;
          background-color: $white;
          border-radius: 50%;
          color: $black;
          display: flex;
          height: 50px;
          justify-content: center;
          transition: color 0.2s ease, background-color 0.2s ease;
          width: 50px;

          &:hover {
            background-color: $black;

            i {
              background-color: $black;
              color: $white;
            }
          }

          i {
            background-color: $white;
            border-radius: 50%;
            color: $black;
            cursor: pointer;
            font-size: 48px;
            height: 48px;
            transition: color 0.2s ease, background-color 0.2s ease;
            width: 48px;
          }
        }
      }

      h3 {
        @include link($color: $white, $hover-color: $cigi-dark-pink);
        color: $white;
        font-family: $tisa-pro;
        font-size: 1em;
        font-weight: 600;
        line-height: 1.1em;
        margin: 0 0 0.2em;
      }

      .authors {
        @include link($color: $white, $hover-color: $cigi-dark-pink);
        color: $white;
        font-size: 0.75em;
        margin: 0.5em 0 0;
        text-transform: uppercase;

        span {
          &:not(:only-child) {
            &::after {
              content: ', ';
              margin-right: 2px;
            }
          }

          &:nth-last-child(2) {
            &::after {
              content: ' and ';
            }
          }

          &:last-child {
            &::after {
              display: none;
            }
          }
        }
      }
    }
  }
}

